<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="bcit.comp7082assignent1.MainActivity">

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@mipmap/ic_launcher"

        android:adjustViewBounds="true"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="left"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/btnCamera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />


    <Button
        android:id="@+id/btnRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="right"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="filter"
        android:layout_alignBaseline="@+id/btnCamera"
        android:layout_alignBottom="@+id/btnCamera"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="snap"
        android:onClick="takePicture"
        android:layout_marginBottom="29dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnLeft"
        android:layout_alignStart="@+id/btnLeft" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Timestamp"
        android:layout_below="@+id/ivMain"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="delete"
        android:layout_alignBaseline="@+id/btnLeft"
        android:layout_alignBottom="@+id/btnLeft"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/caption"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/ivMain"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/timestamp" />
</RelativeLayout>
