<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bcit.comp7082assignent1.SearchActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Photogallery Application"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title_search"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/title_search"
        android:layout_alignRight="@+id/title_search"
        android:layout_alignEnd="@+id/title_search"
        android:layout_marginTop="30dp"
        android:id="@+id/search_fromDate" />

    <TextView
        android:text="From Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_fromDate"
        android:layout_alignLeft="@+id/title_search"
        android:layout_alignStart="@+id/title_search"
        android:layout_marginBottom="11dp"
        android:id="@+id/search_fromDateLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/search_fromDate"
        android:layout_alignRight="@+id/search_fromDate"
        android:layout_alignEnd="@+id/search_fromDate"
        android:layout_marginTop="20dp"
        android:id="@+id/search_toDate" />

    <EditText
        android:id="@+id/search_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_alignBottom="@+id/search_captionLabel"
        android:layout_alignStart="@+id/search_toDate" />

    <TextView
        android:text="To Date: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/search_toDate"
        android:layout_alignLeft="@+id/search_fromDateLabel"
        android:layout_alignStart="@+id/search_fromDateLabel"
        android:layout_marginTop="12dp"
        android:id="@+id/search_toDateLabel" />

    <TextView
        android:id="@+id/search_captionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Caption: "
        android:layout_below="@+id/search_toDate"
        android:layout_alignStart="@+id/search_toDateLabel"
        android:layout_marginTop="28dp" />

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/search_toDate"
        android:layout_alignEnd="@+id/search_toDate"
        android:layout_marginRight="55dp"
        android:layout_marginEnd="55dp"
        android:id="@+id/search_cancel"
        android:onClick="cancel" />

    <Button
        android:text="Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/search_toDateLabel"
        android:layout_toEndOf="@+id/search_toDateLabel"
        android:id="@+id/search_search"
        android:onClick="search" />

    <TextView
        android:id="@+id/lblLat"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLat"
        android:layout_alignStart="@+id/search_captionLabel"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Latitude:" />

    <TextView
        android:id="@+id/tvLng"
        android:layout_width="94dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/search_caption"
        android:layout_alignBottom="@+id/lblLng"
        android:layout_marginStart="-23dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-6dp"
        android:layout_toStartOf="@+id/search_cancel"
        android:text="Unknown" />

    <TextView
        android:id="@+id/lblLng"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_search"
        android:layout_alignStart="@+id/lblLat"
        android:layout_marginBottom="69dp"
        android:text="Longitude" />

    <TextView
        android:id="@+id/tvLat"
        android:layout_width="99dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@+id/lblLng"
        android:layout_marginEnd="-1dp"

        android:layout_marginBottom="48dp"
        android:layout_toStartOf="@+id/search_cancel"
        android:text="Unknown" />

    <EditText
        android:id="@+id/search_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:layout_alignTop="@+id/tvLat"
        android:layout_toEndOf="@+id/tvLat"
        />

    <EditText
        android:id="@+id/search_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:layout_alignTop="@+id/tvLng"
        android:layout_toEndOf="@+id/tvLng"
/>
</RelativeLayout>

